--- a/src/pages/hvem-vi-er.astro
+++ b/src/pages/hvem-vi-er.astro
@@ -23,7 +23,7 @@ import Spacing from "../components/Spacing.astro";
         class="pb-xl md:col-span-2"
       />
     </div>
-    <Button variant="light">Bliv frivillig</Button>
+    <Button href="/bliv-frivillig" variant="light">Bliv frivillig</Button>
 
     <Heading
       htmlheading="h2"
