--- a/src/components/Button.astro
+++ b/src/components/Button.astro
@@ -1,7 +1,8 @@
 ---
 const { variant, type = "button", href, ...rest } = Astro.props;
 
-const base = "rounded-4xl px-4 py-2 button cursor-pointer";
+const base =
+  "inline-flex items-center justify-center rounded-4xl px-4 py-2 button transition-all duration-500 ease-in-out hover:scale-110";
 
 const variants = {
   header: "btn-header text-dark font-bold uppercase",
