--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -16,7 +16,7 @@ const { pathname } = Astro.url;
         <img
           src="/logo.png"
           alt="Billede af The Red Vans logo"
-          class="h-8.25 z-100"
+          class="h-8.25 md:h-6 z-100"
         />
       </a>
 
