--- a/src/pages/artikler.astro
+++ b/src/pages/artikler.astro
@@ -11,7 +11,7 @@ import Spacing from "../components/Spacing.astro";
     <div class="pb-3xl">
       <HeadingParagraf
         title="Artikler"
-        text="Vi lægger vægt på, at sexarbejdere skal have de samme rettiheder og beskyttelse som andre arbejdstagere, og vi engagerer os i at skabe opmærksomhed omkring deres vilkår."
+        text="Vi lægger vægt på, at sexarbejdere skal have de samme rettigheder og beskyttelse som andre arbejdstagere, og vi engagerer os i at skabe opmærksomhed omkring deres vilkår."
       />
     </div>
     <List
@@ -32,5 +32,15 @@ import Spacing from "../components/Spacing.astro";
       title="D. 26/09/25"
       text="Skadesreduktion: Hvad betyder det, og hvordan arbejder The Red Van med det?"
     />
+    <div
+      class="flex justify-center gap-8 pb-3xl pt-2xl md:justify-end md:pr-2xl"
+    >
+      <button>
+        <img src="/pil-tilbage.svg" alt="Tilbage" />
+      </button>
+      <button>
+        <img src="/pil-frem.svg" alt="Frem" />
+      </button>
+    </div>
   </div>
 </MainLayout>
