--- a/src/pages/bliv-frivillig.astro
+++ b/src/pages/bliv-frivillig.astro
@@ -77,7 +77,7 @@ import Spacing from "../components/Spacing.astro";
       <form x-data="{ step: 1 }">
         <div x-show="step === 1">
           <!-- Fulde navn -->
-          <div class="flex flex-col w-88.25 lg:w-96.75 pb-xl">
+          <div class="flex flex-col w-80.25 lg:w-96.75 pb-xl">
             <label for="selvvalgt"
               ><Text
                 teksttype="basemedium"
@@ -92,7 +92,7 @@ import Spacing from "../components/Spacing.astro";
             />
           </div>
 
-          <div class="flex flex-row gap-2xl">
+          <div class="flex flex-row gap-5">
             <!-- e-mail -->
             <div class="flex flex-col w-37.5 lg:w-46 pb-xl">
               <label for="email"
@@ -110,7 +110,7 @@ import Spacing from "../components/Spacing.astro";
             </div>
 
             <!-- mobilnummer -->
-            <div class="flex flex-col w-40.75 lg:w-46">
+            <div class="flex flex-col w-37.5 lg:w-46">
               <label for="mobilnummer"
                 ><Text
                   teksttype="basemedium"
@@ -248,7 +248,7 @@ import Spacing from "../components/Spacing.astro";
         </div>
 
         <div x-show="step === 2">
-          <div class="flex flex-col w-88.25 lg:w-96.75 pb-xl">
+          <div class="flex flex-col w-80.25 lg:w-96.75 pb-xl">
             <label for="besked"
               ><Text
                 teksttype="basemedium"
@@ -261,7 +261,7 @@ import Spacing from "../components/Spacing.astro";
               rows="3"
               class="rounded-xs border-0"></textarea>
           </div>
-          <div class="flex flex-col w-88.25 lg:w-96.75 pb-xl">
+          <div class="flex flex-col w-80.25 lg:w-96.75 pb-xl">
             <label for="besked"
               ><Text
                 teksttype="basemedium"
@@ -275,7 +275,7 @@ import Spacing from "../components/Spacing.astro";
               rows="3"
               class="rounded-xs border-0"></textarea>
           </div>
-          <div class="flex flex-col w-88.25 lg:w-96.75 pb-xl">
+          <div class="flex flex-col w-80.25 lg:w-96.75 pb-xl">
             <label for="besked"
               ><Text
                 teksttype="basemedium"
@@ -289,7 +289,7 @@ import Spacing from "../components/Spacing.astro";
               rows="3"
               class="rounded-xs border-0"></textarea>
           </div>
-          <div class="flex flex-col w-88.25 lg:w-96.75 pb-xl">
+          <div class="flex flex-col w-80.25 lg:w-96.75 pb-xl">
             <label for="besked"
               ><Text
                 teksttype="basemedium"
