--- a/src/pages/hvem-vi-er.astro
+++ b/src/pages/hvem-vi-er.astro
@@ -55,7 +55,7 @@ import Spacing from "../components/Spacing.astro";
       <img
         src="/dragonfly.png"
         alt="Grafisk dragonfly"
-        class="place-self-end md:my-auto"
+        class="place-self-end md:my-auto md:w-4/5"
       />
     </div>
   </section>
