--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -205,7 +205,7 @@ import Spacing from "../components/Spacing.astro";
       <Heading
         htmlheading="h3"
         size="xsmall"
-        stylingclasses=" pb-6xl md:pb-5xl"
+        stylingclasses="md:pb-5xl"
         animate={false}
       >
         Vi lægger vægt på, at sexarbejdere skal have de samme rettigheder og
@@ -214,7 +214,11 @@ import Spacing from "../components/Spacing.astro";
         <br /><br />
         Vi deler vores indsigter og perspektiver i vores blog: læs med her
       </Heading>
-      <img src="/forside4.png" alt="Billede af rød kuglepen" />
+      <img
+        src="/forside4.png"
+        alt="Billede af rød kuglepen"
+        class="w-3/4 md:-mt-40 -rotate-8"
+      />
     </div>
     <div class="border-y-accent-red border-y py-md md:py-0">
       <List
