fjerner cursor-pointer

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -135,7 +135,7 @@ const { pathname } = Astro.url;
       <!-- Burger-knap (kun mobil) -->
       <button
         id="burger"
-        class="md:hidden flex flex-col gap-1.5 cursor-pointer z-10"
+        class="md:hidden flex flex-col gap-1.5 z-10"
         x-on:click="showmenu = ! showmenu"
       >
         <span
