--- a/src/pages/bliv-frivillig.astro
+++ b/src/pages/bliv-frivillig.astro
@@ -133,7 +133,7 @@ import Spacing from "../components/Spacing.astro";
               <Text teksttype="basemedium" stylingclasses="">Pronominer</Text>
 
               <!-- Hun-hende -->
-              <label class="flex items-center gap-5 cursor-pointer">
+              <label class="flex items-center gap-5">
                 <input
                   type="radio"
                   name="køn"
@@ -150,7 +150,7 @@ import Spacing from "../components/Spacing.astro";
               </label>
 
               <!-- Han-ham -->
-              <label class="flex items-center gap-5 cursor-pointer">
+              <label class="flex items-center gap-5">
                 <input
                   type="radio"
                   name="køn"
@@ -167,7 +167,7 @@ import Spacing from "../components/Spacing.astro";
               </label>
 
               <!-- de-dem -->
-              <label class="flex items-center gap-5 cursor-pointer">
+              <label class="flex items-center gap-5">
                 <input
                   type="radio"
                   name="køn"
@@ -189,7 +189,7 @@ import Spacing from "../components/Spacing.astro";
               <Text teksttype="basemedium" stylingclasses="">Sprog</Text>
 
               <!-- dansk -->
-              <label class="flex items-center gap-5 cursor-pointer">
+              <label class="flex items-center gap-5">
                 <input
                   type="radio"
                   name="sprog"
@@ -205,7 +205,7 @@ import Spacing from "../components/Spacing.astro";
               </label>
 
               <!-- engelsk -->
-              <label class="flex items-center gap-5 cursor-pointer">
+              <label class="flex items-center gap-5">
                 <input
                   type="radio"
                   name="sprog"
@@ -222,7 +222,7 @@ import Spacing from "../components/Spacing.astro";
               </label>
 
               <!-- andet -->
-              <label class="flex items-center gap-5 cursor-pointer">
+              <label class="flex items-center gap-5">
                 <input
                   type="radio"
                   name="sprog"
@@ -323,7 +323,7 @@ import Spacing from "../components/Spacing.astro";
             >
 
             <!-- SoMe og kommunikation -->
-            <label class="flex items-center gap-5 cursor-pointer">
+            <label class="flex items-center gap-5">
               <input
                 type="radio"
                 name="interesser"
@@ -340,7 +340,7 @@ import Spacing from "../components/Spacing.astro";
             </label>
 
             <!-- Merch og design -->
-            <label class="flex items-center gap-5 cursor-pointer">
+            <label class="flex items-center gap-5">
               <input
                 type="radio"
                 name="interesser"
@@ -357,7 +357,7 @@ import Spacing from "../components/Spacing.astro";
             </label>
 
             <!-- Event planlægning -->
-            <label class="flex items-center gap-5 cursor-pointer">
+            <label class="flex items-center gap-5">
               <input
                 type="radio"
                 name="interesser"
@@ -374,7 +374,7 @@ import Spacing from "../components/Spacing.astro";
             </label>
 
             <!-- Frivillig omsorg og community -->
-            <label class="flex items-center gap-5 cursor-pointer">
+            <label class="flex items-center gap-5">
               <input
                 type="radio"
                 name="interesser"
@@ -391,7 +391,7 @@ import Spacing from "../components/Spacing.astro";
             </label>
 
             <!-- Kendskab og metoder -->
-            <label class="flex items-center gap-5 cursor-pointer">
+            <label class="flex items-center gap-5">
               <input
                 type="radio"
                 name="interesser"
@@ -408,7 +408,7 @@ import Spacing from "../components/Spacing.astro";
             </label>
 
             <!-- Van og vedligeholdelse -->
-            <label class="flex items-center gap-5 cursor-pointer">
+            <label class="flex items-center gap-5">
               <input
                 type="radio"
                 name="interesser"
