--- a/src/components/Stoetform.astro
+++ b/src/components/Stoetform.astro
@@ -45,7 +45,7 @@ import Button from "./Button.astro";
 
     <div class="flex flex-row gap-7 md:gap-13 pb-md">
       <!-- 75 kr -->
-      <label class="flex items-center gap-5 cursor-pointer">
+      <label class="flex items-center gap-5">
         <input
           type="radio"
           name="beløb"
@@ -66,7 +66,7 @@ import Button from "./Button.astro";
       </label>
 
       <!-- 100 kr -->
-      <label class="flex items-center gap-5 cursor-pointer">
+      <label class="flex items-center gap-5">
         <input
           type="radio"
           name="beløb"
@@ -87,7 +87,7 @@ import Button from "./Button.astro";
       </label>
 
       <!-- 200 kr -->
-      <label class="flex items-center gap-5 cursor-pointer">
+      <label class="flex items-center gap-5">
         <input
           type="radio"
           name="beløb"
@@ -138,7 +138,7 @@ import Button from "./Button.astro";
 
     <div class="flex flex-row gap-21 pb-md">
       <!-- MobilePay -->
-      <label class="flex items-center gap-5 cursor-pointer">
+      <label class="flex items-center gap-5">
         <input
           type="radio"
           name="betalingsmetode"
@@ -158,7 +158,7 @@ import Button from "./Button.astro";
       </label>
 
       <!-- Dankort -->
-      <label class="flex items-center gap-5 cursor-pointer">
+      <label class="flex items-center gap-5">
         <input
           type="radio"
           name="betalingsmetode"
