okay nu den sidste

--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -54,7 +54,7 @@ const {
       </Heading>
     )
   }
-  <Heading htmlheading="base" size="xxsmall" stylingclasses="pb-xl"
+  <Heading htmlheading="base" size="xxsmall"
     >{text}</Heading
   >
 </div>
