--- a/src/pages/hvem-vi-er.astro
+++ b/src/pages/hvem-vi-er.astro
@@ -91,21 +91,27 @@ import Spacing from "../components/Spacing.astro";
         stylingclasses="uppercase pt-lg pb-lg">Ledelsen</Heading
       >
       <div class="grid md:grid-cols-4 md:gap-gutter">
-        <Card
-          title="Forperson"
-          undertitle="Milena Bascuñan"
-          text="Uddannelsesleder på socialrådgiveruddannelsen KP og tidligere leder i Reden International, med bred erfaring inden for socialt arbejde og ledelse i civilsamfundet."
-        />
-        <Card
-          title="Næstforperson"
-          undertitle="Nadir Kadhim Hamza"
-          text="Jurist hos Stensbroens Jurister, hvor han yder juridisk bistand til migrantsexarbejdere og laver oplysningsarbejde om sexarbejderrettigheder."
-        />
-        <Card
-          title="Kasserer"
-          undertitle="Henrik Olsen"
-          text="Økonomi- og administrationschef i Fødevarebanken, med solid erfaring i økonomistyring og bestyrelsesarbejde i NGO’er."
-        />
+        <div class="mb-xl md:mb-0">
+          <Card
+            title="Forperson"
+            undertitle="Milena Bascuñan"
+            text="Uddannelsesleder på socialrådgiveruddannelsen KP og tidligere leder i Reden International, med bred erfaring inden for socialt arbejde og ledelse i civilsamfundet."
+          />
+        </div>
+        <div class="mb-xl md:mb-0">
+          <Card
+            title="Næstforperson"
+            undertitle="Nadir Kadhim Hamza"
+            text="Jurist hos Stensbroens Jurister, hvor han yder juridisk bistand til migrantsexarbejdere og laver oplysningsarbejde om sexarbejderrettigheder."
+          />
+        </div>
+        <div class="mb-xl md:mb-0">
+          <Card
+            title="Kasserer"
+            undertitle="Henrik Olsen"
+            text="Økonomi- og administrationschef i Fødevarebanken, med solid erfaring i økonomistyring og bestyrelsesarbejde i NGO’er."
+          />
+        </div>
       </div>
       <div class="border-t-accent-red border-t mt-lg">
         <Heading
@@ -114,31 +120,48 @@ import Spacing from "../components/Spacing.astro";
           stylingclasses="uppercase pt-lg pb-lg">Bestyrelsesmedlemmer</Heading
         >
         <div class="grid md:grid-cols-4 md:gap-gutter">
-          <Card
-            undertitle="Jannet Van der Veen"
-            text="Sekretariatsleder i Brugernes Akademi, med lang erfaring i brugerdrevet skadesreduktion og sundhedsindsatser for marginaliserede grupper."
-          />
-          <Card
-            undertitle="Jelena Seidel"
-            text="Formand i SIO, med over 25 års erfaring i sexarbejderrettigheder samt grundlægger og politisk konsulent i TRV."
-          />
-          <Card
-            undertitle="Rie Ljungmann"
-            text="Programleder i Røde Kors og tidligere sekretariatsleder i Antidote, med solid erfaring i frivillighed og ledelse i civilsamfundet."
-          />
-          <Card
-            undertitle="Yasmin Bahat"
-            text="Gadeplansmedarbejder i Projekt Udenfor og erfaren frivillig i TRV."
-          />
-          <Card
-            undertitle="Anna Berg"
-            text="konsulent i Beskæftigelses- og Integrationsforvaltningen i Københavns Kommune, med lang erfaring inden for politisk rådgivning og rettighedsarbejde."
-          />
-          <Card
-            undertitle="Maria Kloster Tolstrup"
-            text="Antropologistuderende og erfaren frivillig i TRV."
-          />
-          <Card undertitle="Mathilde Høyberg" text="Erfaren frivillig i TRV." />
+          <div class="mb-xl md:mb-0">
+            <Card
+              undertitle="Jannet Van der Veen"
+              text="Sekretariatsleder i Brugernes Akademi, med lang erfaring i brugerdrevet skadesreduktion og sundhedsindsatser for marginaliserede grupper."
+            />
+          </div>
+          <div class="mb-xl md:mb-0">
+            <Card
+              undertitle="Jelena Seidel"
+              text="Formand i SIO, med over 25 års erfaring i sexarbejderrettigheder samt grundlægger og politisk konsulent i TRV."
+            />
+          </div>
+          <div class="mb-xl md:mb-0">
+            <Card
+              undertitle="Rie Ljungmann"
+              text="Programleder i Røde Kors og tidligere sekretariatsleder i Antidote, med solid erfaring i frivillighed og ledelse i civilsamfundet."
+            />
+          </div>
+          <div class="mb-xl md:mb-0">
+            <Card
+              undertitle="Yasmin Bahat"
+              text="Gadeplansmedarbejder i Projekt Udenfor og erfaren frivillig i TRV."
+            />
+          </div>
+          <div class="mb-xl md:mb-0">
+            <Card
+              undertitle="Anna Berg"
+              text="konsulent i Beskæftigelses- og Integrationsforvaltningen i Københavns Kommune, med lang erfaring inden for politisk rådgivning og rettighedsarbejde."
+            />
+          </div>
+          <div class="mb-xl md:mb-0">
+            <Card
+              undertitle="Maria Kloster Tolstrup"
+              text="Antropologistuderende og erfaren frivillig i TRV."
+            />
+          </div>
+          <div class="mb-xl md:mb-0">
+            <Card
+              undertitle="Mathilde Høyberg"
+              text="Erfaren frivillig i TRV."
+            />
+          </div>
         </div>
       </div>
     </div>
