--- a/src/pages/artikler.astro
+++ b/src/pages/artikler.astro
@@ -8,10 +8,10 @@ import Spacing from "../components/Spacing.astro";
 <MainLayout title="Artikler">
   <Spacing />
   <div class="bg-greywhite px-gutter py-3xl md:px-2xl md:pt-4xl md:pb-4xl">
-    <div class="pb-3xl">
+    <div>
       <HeadingParagraf
         title="Artikler"
-        text="Vi lægger vægt på, at sexarbejdere skal have de samme rettigheder og beskyttelse som andre arbejdstagere, og vi engagerer os i at skabe opmærksomhed omkring deres vilkår."
+        text="Vi lægger vægt på, at sexarbejdere skal have de samme rettigheder og beskyttelse som andre arbejdstagere, og vi engagerer os i at skabe opmærksomhed omkring deres vilkår. Læs vores artikler her."
       />
     </div>
     <List
