--- a/src/pages/stoet.astro
+++ b/src/pages/stoet.astro
@@ -18,7 +18,7 @@ import Spacing from "../components/Spacing.astro";
       text="Når du støtter vores arbejde er du med til at sikre rettigheder, sikkerhed og værdighed for gadebaserede sexarbejdere!"
     />
     <section class="grid md:grid-cols-2 md:pt-5xl">
-      <Text teksttype="basemedium" stylingclasses=" pb-6xl md:pb-2xl">
+      <Text teksttype="base" stylingclasses=" pb-5xl md:pb-2xl">
         Din støtte gør en konkret forskel: Den hjælper os at stille vores røde
         varevogn til rådighed, som gadebaserede sexarbejdere kan bruge med sine
         kunder, under tryggere, mere hygiejniske og værdige forhold end gaden
