tilføjer password til forsiden

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,9 +7,11 @@ import Card from "../components/Card.astro";
 import List from "../components/List.astro";
 import Stoetform from "../components/Stoetform.astro";
 import Spacing from "../components/Spacing.astro";
+import Password from "../components/Password.astro";
 ---
 
 <MainLayout title="Forside">
+  <Password />
   <Spacing />
   <section class="bg-bordeaux px-gutter py-2xl md:px-2xl md:pt-xl">
     <img src="/logo-text.png" alt="The Red Van" class="md:hidden" />
